[project]
name = "flux-tools"
description = "Flux generation tools. Allow easy computation of Flux generation resolutions and upscale needs to automate workflows. Also allow to report generation usage to BFL if licensed."
version = "2.0.0"
license-files = ["LICENSE"]
dependencies = ["requests"]

[project.urls]
Repository = "https://github.com/iguanesolutions/comfyui-flux-tools"

[tool.comfy]
PublisherId = "iguanesolutions"
DisplayName = "Flux Tools"
Icon = ""
