[project]
name = "ig1-tools"
description = "Generation tools, mostly about resolutions, high resolutions generation and automation. Also allow to report generation usage to BFL if licensed."
version = "3.0.0"
license-files = ["LICENSE"]
dependencies = ["requests"]

[project.urls]
Repository = "https://github.com/iguanesolutions/comfyui-ig1-tools"

[tool.comfy]
PublisherId = "iguanesolutions"
DisplayName = "IG1 Tools"
Icon = ""
