[project]
name = "ig1-tools"
description = "Tools to simplify automation of high resolution generation workflows (resolution, aspect ratio, model resolution advisor, hires, upscale). Also allow to report Flux generation usage to BFL if licensed."
version = "3.2.0"
license = { text = "MIT License" }
dependencies = ["requests"]

[project.urls]
Repository = "https://github.com/iguanesolutions/comfyui-ig1-tools"

[tool.comfy]
PublisherId = "iguanesolutions"
DisplayName = "IG1 Tools"
Icon = "https://media.githubusercontent.com/media/iguanesolutions/comfyui-ig1-tools/refs/heads/main/res/logo.png"
